--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,16 @@
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
 
-# Precompiled Headers
-*.gch
-*.pch
+# Translations
+*.mo
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Mr Developer
+.mr.developer.cfg
+.settings
+.idea/*
+.idea
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+composer.lock
+vendor
