--- a/shippable.yml
+++ b/shippable.yml
@@ -35,7 +35,7 @@ install:
   - composer self-update
   - composer install
   - npm install
-  - bower install
+  - node_modules/.bin/bower install
 
 
 before_script: 
