--- a/shippable.yml
+++ b/shippable.yml
@@ -40,8 +40,8 @@ install:
 before_script: 
   - mkdir -p shippable/testresults
   - mkdir -p shippable/codecoverage
-  - mysql -v -v </work/repos/yafra-database/yafradb/dbe_init_mysql.sql
-  - mysql -v -v </work/repos/yafra-database/yafradb/dbe_generate_mysql.sql
+  - sudo mysql -v -v </work/repos/yafra-database/yafradb/dbe_init_mysql.sql
+  - sudo mysql -v -v </work/repos/yafra-database/yafradb/dbe_generate_mysql.sql
   #- sudo -E /work/repos/yafra-database/build-db.sh mysql
   - pwd
 
