--- a/shippable.yml
+++ b/shippable.yml
@@ -35,7 +35,7 @@ before_install:
   - sudo git clone https://github.com/yafraorg/yafra.git
   - sudo git clone https://github.com/yafraorg/yafra-database.git
   - cd
-  - cd workspace/src/github.com/yafraorg/yafra-php
+  - cd workspace/src/github.com/yafra-php
 
 install:
   - pwd
